style: Fix transparent background on mobile left-side tree nav overlay (#9274)

--- a/resources/scss/src/app/content/Container.scss
+++ b/resources/scss/src/app/content/Container.scss
@@ -17,8 +17,9 @@
 
     @media (max-width: 640px) {
         .sidenav-container {
-            box-shadow: var(--neo-app-content-sidenav-shadow);
-            height    : 100%;
+            background-color: var(--neo-app-content-sidenav-bg);
+            box-shadow      : var(--neo-app-content-sidenav-shadow);
+            height          : 100%;
             left      : -350px;
             overflow  : visible;
             position  : fixed;
